--- a/public/assets/css/sidebar-menu.css
+++ b/public/assets/css/sidebar-menu.css
@@ -43,7 +43,7 @@
 	padding: 13px 5px 13px 15px;
 	display: block;
 	border-left: 3px solid transparent;
-	color: #223035;
+	color: #fff;
 	font-size: 15px;
 }
 .sidebar-menu>li>a>.fa {
