--- a/public/assets/css/app-style.css
+++ b/public/assets/css/app-style.css
@@ -4622,7 +4622,7 @@ form.striped-rows .form-group {
 }
 
 .border-info {
-    border-color: #0dceec !important;
+    border-color: #52699B !important;
 }
 
 .border-secondary {
