--- a/public/assets/css/app-style.css
+++ b/public/assets/css/app-style.css
@@ -5980,7 +5980,7 @@ input[type="color"] {
     color: white;
 }
 
-.titulos-informe {
+.titulos-informes {
     color: #000 !important;
     min-height: 15vh;
 }
