--- a/public/assets/css/app-style.css
+++ b/public/assets/css/app-style.css
@@ -5981,7 +5981,7 @@ input[type="color"] {
 }
 
 .titulos-informes {
-    color: #000 !important;
+    color: #52699B !important;
     min-height: 10vh;
 }
 
