--- a/public/assets/css/app-style.css
+++ b/public/assets/css/app-style.css
@@ -5586,13 +5586,23 @@ input[type="color"] {
         font-size: 30px;
         line-height: 34px;
     }
-    
+
     .error-pages {
         margin-top: 110px;
     }
 
     .coming-soon {
         margin-top: 110px;
+    }
+
+    .titulos-visuales{
+        margin-left: 15px;
+        margin-right: 15px;
+        height: 110px;
+    }
+
+    .titulos-visuales > .titulos-categoria{
+        padding-top: .5rem!important;
     }
 
     .titulos-informes{
