--- a/public/assets/css/app-style.css
+++ b/public/assets/css/app-style.css
@@ -4576,6 +4576,10 @@ form.striped-rows .form-group {
     background: linear-gradient(45deg, #215f00, #e4e4d9) !important;
 }
 
+.border {
+    border: 2px solid #dee2e6 !important;
+}
+
 .border-left-sm {
     border-left: 2px solid !important;
 }
@@ -4618,7 +4622,7 @@ form.striped-rows .form-group {
 }
 
 .border-info {
-    border-color: #0dceec !important;
+    border-color: #52699B !important;
 }
 
 .border-secondary {
@@ -5575,20 +5579,6 @@ input[type="color"] {
     text-transform: uppercase;
 }
 
-/* Responsive */
-@media only screen and (max-width: 1366px) {
-
-    .error-pages {
-        margin-top: 110px;
-    }
-
-    .coming-soon {
-        margin-top: 110px;
-    }
-
-}
-
-
 @media only screen and (max-width: 1199px) {
 
     .row.row-group>div {
@@ -5971,9 +5961,36 @@ input[type="color"] {
     margin-left: 25px;
     margin-right: 25px;
     text-align: center;
-    height: 100px;
+    height: 130px;
     background: #52699B;
     color: white;
+}
+
+.titulos-informes {
+    color: #52699B !important;
+    min-height: 10vh;
+}
+
+.observaciones-informes {
+    min-height: 15vh;
+    padding: .5rem !important;
+}
+
+@media print {
+    h2 {
+        font-size: 30px;
+        line-height: 34px;
+    }
+
+    .titulos-informes {
+        color: #52699B !important;
+        min-height: 5vh;
+    }
+
+    .observaciones-informes {
+        min-height: 8vh;
+        padding: .5rem !important;
+    }
 }
 
 .mini-btn {
@@ -6215,6 +6232,10 @@ ul .datosvertical {
 }
 
 @media (min-width: 1536px) {
+    .container{
+        min-width: 1792px;
+    }
+
     .pdsmenuflow {
         max-height: 79vh;
     }
@@ -6229,6 +6250,11 @@ ul .datosvertical {
         height: 41.6vh;
         min-height: 41.6vh;
         max-height: 41.6vh;
+    }
+
+    .titulos-procentaje{
+        font-size: 30px;
+        line-height: 34px;
     }
 }
 
@@ -6271,4 +6297,47 @@ ul .datosvertical {
 .lmhreporte li.active {
     background-color: #52699B;
     color: #fff !important;
+}
+
+/* Responsive */
+@media only screen and (max-width: 1367px) {
+
+    h2{
+        font-size: 30px;
+        line-height: 34px;
+    }
+
+    .error-pages {
+        margin-top: 110px;
+    }
+
+    .coming-soon {
+        margin-top: 110px;
+    }
+
+    .titulos-visuales{
+        margin-left: 15px;
+        margin-right: 15px;
+        height: 120px;
+    }
+
+    .titulos-visuales > .titulos-categoria{
+        padding-top: .5rem!important;
+    }
+
+    .titulos-informes{
+        font-size: 18px;
+        line-height: 22px;
+        min-height: 15vh;
+    }
+
+    .observaciones-informes{
+        min-height: 12.5vh;
+    }
+
+    .titulos-procentaje{
+        font-size: 30px;
+        line-height: 34px;
+    }
+
 }
